<resources>
    <string name="app_name">云蚂蚁PDA</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="action_settings">Settings</string>
    <string name="button_clear">Clear</string>
    <string name="scan_desc">Scan: 0\nResult: 0</string>
    <string name="button_rate">100ms/time</string>
    <string name="button_auto">AutoTest</string>
    <string name="checkbox_tone">Tone</string>
    <string name="single_scan">Pulse scan</string>
    <string name="continuous_scan">Continuous scan</string>
    <string name="key_scan">Level scan</string>
    <string name="base_bar">The reference barcode</string>
    <string name="hint_scan_base_code">Scan or input a barcode</string>
    <string name="base_code_error">The reference barcode error</string>
    <string name="test_total">Total times</string>
    <string name="test_total_error">Total times error</string>
    <string name="hint_test_total">Times</string>
    <string name="scan_interval">Time interval</string>
    <string name="interval_error">Time interval error</string>
    <string name="hint_input_interval">"Suggest>=300ms"</string>
    <string name="start_test">Start testing</string>
    <string name="stop_test">Stop testing</string>
    <string name="current_bar">The reference barcode</string>
    <string name="test_result">Test result</string>
    <string name="wrong_code_list">Error list</string>
    <string name="scan_message">Please enable scanner in settings</string>
    <string name="dialog_ok">OK</string>
    <string name="single_shoot">Single scan</string>
    <string name="continuous_shoot">Continuous scan</string>

    <string name="dialog_waiting">努力加载中...</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="login">登 录</string>
    <string name="back">返回</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="workBar">工作台</string>
    <string name="user">我</string>
    <string name="help">帮助中心</string>
    <string name="wifi">连接wifi</string>
    <string name="setting_wifi">设置wifi</string>
    <string name="open_wifi">打开蓝牙</string>
    <string name="bluetooth">连接蓝牙</string>
    <string name="wait_packing_order">待拣货单</string>
    <string name="has_packing_order">已拣货单</string>
    <string name="has_packing_order_detail">已拣货单详情</string>
    <string name="pack_manager">装箱管理</string>
    <string name="pack_detail">装箱详情</string>
    <string name="outof_stock">当日缺货</string>
    <string name="outof_stock_detail">当日缺货详情</string>
    <string name="cancel_order">取消订单</string>
    <string name="send_note">待拣货单</string>
    <string name="has_park_total">已拣货商品</string>
    <string name="send_note_list">送货单列表</string>
    <string name="send_note_search">送货单查询</string>
    <string name="cancel_order_detail">取消订单详情</string>
    <string name="packing_order_detail">拣货详情</string>
    <string name="goods_conform">收货确认</string>
    <string name="goods_conform_detail">收货确认详情</string>
    <string name="goods_pack">按货分拣</string>
    <string name="goods_pack_detail">按货分拣详情</string>
    <string name="order_scan">送货单扫描</string>
    <string name="pack_order_detail">分拣单详情</string>
    <string name="scan_car">装车扫描</string>
    <string name="drawer_goods">司机拣货</string>
    <string name="order_gather">订单收款</string>
    <string name="drawer_position">司机定位</string>
    <string name="drawer_depart">司机发车</string>
    <string name="drawer_scan">订单扫描</string>
    <string name="pack_car">拣货装车</string>
    <string name="wait_pick_goods">待装货单</string>
    <string name="order_manager">订单管理</string>
    <string name="order_manager_detail">订单管理详情</string>
    <string name="search">查询</string>
    <string name="packing">拣货</string>
    <string name="code_hint">条形码/商品名称</string>
    <string name="save_print">装箱打印</string>
    <string name="drawer_tallying">司机点货</string>
    <string name="wait_tallying">待点货单</string>
    <string name="wait_tallying_detail">待点货单详情</string>
    <string name="print">打印</string>
    <string name="detail">详情</string>
    <string name="exit">退出</string>
    <string name="piece">件</string>
    <string name="strip">条</string>
    <string name="box">箱</string>
    <string name="single">单</string>
    <string name="update">更新</string>
    <string name="update_message">检测到有新的版本，请更新至最新版本!</string>
    <string name="conform">确 定</string>
    <string name="reject_check">退货审核</string>
    <string name="reject_check_detail">退货审核详情</string>
    <string name="all_conform">批量确认</string>
    <string name="packed_manager">分拣管理</string>
    <string name="choose">请选择</string>
    <string name="status">状态：</string>
    <string name="cancel">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
