<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_drawer_scan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rect_grey_bg"
            android:drawablePadding="@dimen/space"
            android:drawableTop="@mipmap/ic_order_scan"
            android:gravity="center"
            android:padding="@dimen/space"
            android:text="@string/drawer_scan" />

        <TextView
            android:id="@+id/tv_drawer_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rect_grey_bg"
            android:drawablePadding="@dimen/space"
            android:drawableTop="@mipmap/ic_location"
            android:gravity="center"
            android:padding="@dimen/space"
            android:text="@string/drawer_depart" />

        <TextView
            android:id="@+id/tv_drawer_goods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rect_grey_bg"
            android:drawablePadding="@dimen/space"
            android:drawableTop="@mipmap/ic_drawer_goods"
            android:gravity="center"
            android:padding="@dimen/space"
            android:text="@string/drawer_tallying" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_gathering"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rect_grey_bg"
            android:drawablePadding="@dimen/space"
            android:drawableTop="@mipmap/ic_gathering"
            android:gravity="center"
            android:padding="@dimen/space"
            android:text="@string/order_gather" />

        <TextView
            android:id="@+id/tv_order_manager"
            android:layout_width="0dp"
            android:background="@drawable/rect_grey_bg"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/space"
            android:drawableTop="@mipmap/ic_park_manager"
            android:gravity="center"
            android:padding="@dimen/space"
            android:text="@string/order_manager"/>

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>