<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
            android:text="单件拣货"
            android:drawableLeft="@mipmap/ic_arrow_red"
            android:drawablePadding="@dimen/space"
            android:layout_gravity="center"
            android:padding="@dimen/space"
            android:textSize="@dimen/ts_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_wait_picking_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rect_grey_bg"
                android:drawablePadding="@dimen/space"
                android:drawableTop="@mipmap/ic_wait_packing_order"
                android:gravity="center"
                android:padding="@dimen/space"
                android:text="@string/wait_packing_order" />

            <TextView
                android:id="@+id/tv_has_packing_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rect_grey_bg"
                android:drawablePadding="@dimen/space"
                android:drawableTop="@mipmap/ic_has_packing"
                android:gravity="center"
                android:padding="@dimen/space"
                android:text="@string/has_packing_order" />

            <TextView
                android:id="@+id/tv_pick_manager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rect_grey_bg"
                android:drawablePadding="@dimen/space"
                android:drawableTop="@mipmap/ic_park_manager"
                android:gravity="center"
                android:padding="@dimen/space"
                android:text="@string/pack_manager" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_out_of_stock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rect_grey_bg"
                android:drawablePadding="@dimen/space"
                android:drawableTop="@mipmap/ic_out_of_stock"
                android:gravity="center"
                android:padding="@dimen/space"
                android:text="@string/outof_stock" />

            <TextView
                android:id="@+id/tv_cancel_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rect_grey_bg"
                android:drawablePadding="@dimen/space"
                android:drawableTop="@mipmap/ic_cancel_order"
                android:gravity="center"
                android:padding="@dimen/space"
                android:text="@string/cancel_order" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
        <TextView
            android:text="整件拣货"
            android:drawableLeft="@mipmap/ic_arrow_red"
            android:drawablePadding="@dimen/space"
            android:padding="@dimen/space"
            android:textSize="@dimen/ts_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_send_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rect_grey_bg"
                android:drawablePadding="@dimen/space"
                android:drawableTop="@mipmap/ic_send_note"
                android:gravity="center"
                android:padding="@dimen/space"
                android:text="@string/send_note" />
            <TextView
                android:id="@+id/tv_all_pack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rect_grey_bg"
                android:drawablePadding="@dimen/space"
                android:drawableTop="@mipmap/ic_all_packed"
                android:gravity="center"
                android:padding="@dimen/space"
                android:text="@string/has_park_total" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
</LinearLayout>