<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.yun.mayi.pda.module.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_x2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space_x3"
            android:src="@mipmap/ic_logo" />

        <com.yun.mayi.pda.widget.ClearEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_grey_bg"
            android:drawableLeft="@mipmap/ic_person"
            android:drawablePadding="@dimen/space"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="@dimen/space_x1.5" />

        <com.yun.mayi.pda.widget.ClearEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_x2"
            android:lines="1"
            android:singleLine="true"
            android:background="@drawable/rect_grey_bg"
            android:drawableLeft="@mipmap/ic_password"
            android:drawablePadding="@dimen/space"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/space_x1.5" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_x6"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_x4"
            android:background="@drawable/round_red"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_x_large" />
    </LinearLayout>


</LinearLayout>
